--- a/basic/web/css/dashboard.css
+++ b/basic/web/css/dashboard.css
@@ -1,3 +1,4 @@
+
 .diagram-container{
     width: 220px;
     height: 220px;
@@ -22,4 +23,8 @@
     text-align: right;
     font-size: 16px;
     padding: 80px 80px 0 30px;
+}
+
+.title {
+    margin-bottom: 10px;
 }
