Change way to get execution plan, add new view to display execution plan

--- a/basic/web/css/app.css
+++ b/basic/web/css/app.css
@@ -190,6 +190,13 @@ hr {
     margin:20px;
 }
 
+.section-full
+{
+    background-color: white;
+    border-top: 3px solid #E7EAEC;
+    padding: 0 15px 10px 15px;
+}
+
 .section-sm {
     background-color: white;
     border-top: 3px solid #E7EAEC;
